fluxcd/apps/main/authelia/ingress-route.yaml
# Ingress route for authelia
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.fzymgc.house`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: authelia-tls
